--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "gulp-eslint": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "lab": "^8.0.2"
+  },
+  "dependencies": {
+    "debug": "^2.2.0",
+    "request": "^2.67.0"
   }
 }
