added tests for API entity

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^2.2.0",
     "eslint": "^1.10.3",
     "eslint-config-flexshopper": "github:flexshopper/eslint-config",
+    "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-notify": "^2.2.0",
